11862
```
scalac-hash 46e8eceecc5b5f6b49075550e54f035126fc256a~1 -Xdev sandbox/test.scala
topic/require-java-8 ~/code/scala scalac-hash 46e8eceecc5b5f6b49075550e54f035126fc256a -Xdev sandbox/test.scala
warning: !!! isSubType2(Proxy[PP], P, _) compares HK type with proper type
warning: !!! isSubType2(Proxy[PP], P, _) compares HK type with proper type
sandbox/test.scala:9: error: kinds of the type arguments (Proxy[PP]) do not conform to the expected kinds of the type parameters (type P) in class Stuff.
Proxy[PP]'s type parameters do not match type P's expected parameters:
trait Proxy has one type parameter, but type P has one
case class Stuff[+P[PP <: Proxiable] <: Proxy[PP]](content: P[Data])
           ^
two warnings found
one error found
```
